<resources>
    <string name="app_name">BASICOnlineAndroid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">enter</string>
    <string name="settings">Settings</string>
    <string name="welcome_basic">Welcome To BASIC Online</string>
    <string name="help_menu">Help</string>
    <string name="share_action">Share</string>
    <string name="settings_action">Settings</string>
    <string name="libraries_action">Find Library</string>
    <string name="help_screen">BASIC Online Android was inspired partly by Michigan Technological University professor Charles Wallace\'s BASIC Program as well as the Developers\' senior project BASIC Online BASIC Online Android\'s goal is to educate users on topics like computer parts, social media, online threats, and internet browsers. &#xA;&#xA;The application is broken down into five main parts, each accessible from the home screen or side navigation menu. You can quiz yourself via the quiz option which will ask you true/false or fill in the blank questions. You can also learn about more about computers, internet browsers, social media, and online safety by selecting one of those options. Each information option is broken into three subtopics. &#xA;&#xA;You can also search for a nearby library that may be able to offer you more resources through an option located on the same options menu used to get to this screen.</string>
    <string name="nav_home">Home Screen</string>
    <string name="nav_library">Find Local Library</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_share">Share</string>
    <string name="nav_message">Message</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_open_drawer">Open Navigation Drawer</string>
    <string name="nav_close_drawer">Close Navigation Drawer</string>
    <string name="title_activity_find_library">Map</string>
    <string name="nav_quiz">QUIZ</string>
    <string name="welcome_quiz">Ready Quiz Your Knowledge</string>
</resources>
